Add route to filter datasets based on minename.
Also display 'No Data' if there is no available dataset.

Fixes #2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
             <div class='pt-20'> </div>
     				<div class="tab-content mt-lg-20">
     					<div role="tabpanel" class="tab-pane fade in active" id="datasets-list">
-                <table style="width:100%" class="table table-hover table-responsive">
+                <table id='dataset-table' style="width:100%" class="table table-hover table-responsive">
                   <thead>
                     <tr>
                       <th class="col-md-3">Name</th>
@@ -102,7 +102,8 @@
                   <tbody id="list-table-body">
 
                   </tbody>
-                </table>
+								</table>
+								<h3 id="no-dataset-msg">No Data</h3>
 
                 <div id="mine-modals" class="modal fade" tabindex="-1" role="dialog">
                   <div class="modal-dialog">
